<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.inputProfile.InputProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/blank_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_photo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tambah_photo"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:strokeWidth="2dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_tb"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tinggi_badan"
        app:boxBackgroundMode="filled"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/btn_change_photo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_bb"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/berat_badan"
        app:boxBackgroundMode="filled"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/layout_tb">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_bb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_umur"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/umur"
        app:boxBackgroundMode="filled"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/layout_bb">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_umur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/gender"
        app:boxBackgroundMode="filled"
        app:endIconMode="dropdown_menu"
        app:layout_constraintTop_toBottomOf="@id/layout_umur">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/db_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/activity"
        app:boxBackgroundMode="filled"
        app:endIconMode="dropdown_menu"
        app:layout_constraintTop_toBottomOf="@id/layout_gender">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/db_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/layout_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>