<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.signup.SignupActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="217dp"
        android:layout_height="217dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_app" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CV_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginEnd="-16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:cardCornerRadius="60dp"
        app:cardBackgroundColor="@color/light_purple"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:layout_marginTop="16dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="16dp"
                android:text="@string/tv_title_signup"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:fontFamily="@font/autour_one"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/layout_name"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_name"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/tv_title">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_username"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:boxBackgroundMode="outline"
                app:layout_constraintTop_toBottomOf="@id/layout_username">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_confirmacc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sudah_punya_akun"
                android:textColor="@color/black"
                android:fontFamily="@font/autour_one"
                app:layout_constraintTop_toBottomOf="@id/layout_password"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="6dp"
                android:text="@string/to_login"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:fontFamily="@font/autour_one"
                app:layout_constraintTop_toBottomOf="@id/layout_password"
                app:layout_constraintStart_toEndOf="@id/tv_confirmacc"/>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/dark_purple"
                android:text="@string/tv_title_signup"
                android:textColor="@color/white"
                android:fontFamily="@font/autour_one"
                app:layout_constraintTop_toBottomOf="@id/tv_to_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>